# VerdantMe

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  LICENSE  README.md  TODO.md  config.example.json  pyproject.toml  render.yaml
.claude/: launch.json
.claude/hooks/: pre-push-uat.sh
.claude/skills/add-api-endpoint/: SKILL.md
.claude/skills/add-ats-fetcher/: SKILL.md
.claude/skills/run-all-checks/: SKILL.md
.claude/skills/supabase-migration/: SKILL.md
.claude/skills/uat-landing-page/: SKILL.md
.claude/skills/uat-local-companies/: SKILL.md
.claude/skills/uat-local-roles/: SKILL.md
data/: CLAUDE.md  company_registry_archive.json
docs/: docs.md
jobfinder/: __init__.py  cli.py  config.py
jobfinder/api/: CLAUDE.md  auth.py  main.py  models.py  rbac.py
jobfinder/api/routes/: companies.py  logs.py  me.py  pipeline.py  render_logs.py  resume.py  roles.py  settings.py
jobfinder/companies/: discovery.py  prompts.py
jobfinder/pipeline/: CLAUDE.md  __init__.py  calendar.py  gmail.py  reasoning.py
jobfinder/resume/: parser.py
jobfinder/roles/: CLAUDE.md  README.md  cache.py  checkpoint.py  discovery.py  errors.py  filters.py  local_filters.py  metrics.py  pipeline_path.py  scorer.py
jobfinder/roles/ats/: __init__.py  ashby.py  base.py  career_page.py  greenhouse.py  lever.py  unsupported.py
jobfinder/roles/theirstack/: client.py  credits.py  location_mapper.py  title_broadener.py
jobfinder/storage/: __init__.py  api_profiles.py  backend.py  registry.py  schemas.py  store.py  supabase_backend.py  vault.py
jobfinder/utils/: display.py  http.py  log_stream.py  throttle.py
scripts/: apply_vault_migration.py  set_user_role.py
setup/: README.md  setup.ps1  setup.sh
supabase/.temp/: pooler-url  project-ref
supabase/migrations/: 002_rls.sql  20240101000001_schema.sql  20240101000003_vault_api_keys.sql  20240101000004_company_runs_and_job_runs.sql  20240101000005_profile_pictures.sql  20240101000012_pipeline.sql  20240101000013_google_tokens.sql  20240101000014_linkedin_source.sql  20240101000016_fix_google_oauth_profile.sql  20240101000016_theirstack_credits.sql  20240101000016_user_roles.sql  CLAUDE.md
tests/: conftest.py  test_api_cors.py  test_browser_agent_pipeline.py  test_local_filters.py
tests/fixtures/: browser_agent_jobs.json
ui/: .env.example  CLAUDE.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx
ui/src/components/: AboutModal.tsx  AuthProvider.tsx  CompaniesTab.tsx  DebugLogPanel.tsx  Footer.tsx  JobSearchPreferencesModal.tsx  LandingPage.tsx  LoginPage.tsx  MobileNav.tsx  ModeSelectionPage.tsx  MyProfileModal.tsx  OffersPage.tsx  PipelinePage.tsx  PreferencesModal.tsx  ProfileMenu.tsx  RenderLogPanel.tsx  ResumeTab.tsx  RolesTab.tsx  SideNav.tsx  TopNav.tsx
ui/src/components/pipeline/: PipelineArchiveSection.tsx  PipelineBacklog.tsx  (+10 more)
ui/src/contexts/: ModeContext.tsx  RoleContext.tsx
ui/src/lib/: api.ts  supabase.ts  usePageView.ts
ui/src/tests/: App.test.tsx  ResumeTab.test.tsx  api.test.ts
(+6 files in other folders)
